# OgmaDB

./: .gitignore  Cargo.toml  README.md
src/: bin.rs  lib.rs  parser.rs  table.rs
src/client/: cli.rs  table.rs
src/common/: error.rs  mod.rs  network.rs  table.rs
src/query_engine/: mod.rs
src/server/: cli.rs  network.rs  test_code.rs
src/storage_engine/: cache.rs  mod.rs
